Fixed the alignment of pictures and text

--- a/CSS/paths.css
+++ b/CSS/paths.css
@@ -16,15 +16,17 @@ body {
     padding: 0;
 }
 
-/* Style the dropdown items */
 .dropdown-content li {
-    padding: 10px;
+    padding: 1px;
+    margin: 10px;
+    
 }
 
 /* Show the dropdown content when the parent (Programs) is hovered */
 .dropdown:hover .dropdown-content {
     display: block;
     margin-top: 5px;
+    padding: 5px;
 }
 
 /* Style the navigation items */
@@ -186,6 +188,7 @@ button:hover{
 .vince-pic {
     max-width: 40%;
     margin-right: 200px;
+    margin-top: 20px;
 }
 .vince-bg {
     
@@ -194,7 +197,7 @@ button:hover{
     padding: 20px;
     text-align: justify;
     font-size: medium;
-    margin-top: 0px;
+    margin-top: -90px;
 }
 
 .Mentzer {
